Bug 476973. Don't get confused by repeated seeks in the Ogg decoder. r=doublec